[tool.poetry]
name = "repl_python3_omy-live-stream-source"
version = "0.1.0"
description = ""
authors = ["korrylol <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
